tests/baselines/reference/bestCommonTypeWithContextualTyping(strict=true).errors.txt
bestCommonTypeWithContextualTyping.ts(2,5): error TS7008: Member 'dummy' implicitly has an 'any' type.
bestCommonTypeWithContextualTyping.ts(7,5): error TS7008: Member 'dummy' implicitly has an 'any' type.
bestCommonTypeWithContextualTyping.ts(16,26): error TS2454: Variable 'e' is used before being assigned.
bestCommonTypeWithContextualTyping.ts(17,45): error TS2454: Variable 'e' is used before being assigned.
bestCommonTypeWithContextualTyping.ts(19,38): error TS2454: Variable 'e' is used before being assigned.
bestCommonTypeWithContextualTyping.ts(19,42): error TS2454: Variable 'e' is used before being assigned.
bestCommonTypeWithContextualTyping.ts(20,32): error TS2454: Variable 'e' is used before being assigned.
bestCommonTypeWithContextualTyping.ts(20,37): error TS2454: Variable 'e' is used before being assigned.


==== bestCommonTypeWithContextualTyping.ts (8 errors) ====
    interface Contextual {
        dummy;
        ~~~~~
!!! error TS7008: Member 'dummy' implicitly has an 'any' type.
        p?: number;
    }
    
    interface Ellement {
        dummy;
        ~~~~~
!!! error TS7008: Member 'dummy' implicitly has an 'any' type.
        p: any;
    }
    
    var e: Ellement;
    
    // All of these should pass. Neither type is a supertype of the other, but the RHS should
    // always use Ellement in these examples (not Contextual). Because Ellement is assignable
    // to Contextual, no errors.
    var arr: Contextual[] = [e]; // Ellement[]
                             ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var obj: { [s: string]: Contextual } = { s: e }; // { s: Ellement; [s: string]: Ellement }
                                                ~
!!! error TS2454: Variable 'e' is used before being assigned.
    
    var conditional: Contextual = null ? e : e; // Ellement
                                         ~
!!! error TS2454: Variable 'e' is used before being assigned.
                                             ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var contextualOr: Contextual = e || e; // Ellement
                                   ~
!!! error TS2454: Variable 'e' is used before being assigned.
                                        ~
!!! error TS2454: Variable 'e' is used before being assigned.